--- a/public/plantilla/css/style.css
+++ b/public/plantilla/css/style.css
@@ -5700,3 +5700,35 @@ transform: rotate(45deg);
 .arrow--right {
 transform: rotate(225deg);
 }
+
+/* Tamaño del scroll */
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+/* Estilos barra (thumb) de scroll */
+*::-webkit-scrollbar-thumb {
+    background-color:#f675997d ;
+    border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb:active{
+    background-color: #999999;
+}
+
+*::-webkit-scrollbar-thumb:hover{
+    background: #f67599;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos track de scroll */
+*::-webkit-scrollbar-track{
+    background: #e1e1e1;
+    border-radius: 4px;
+}
+
+*::-webkit-scrollbar-track:hover,
+*::-webkit-scrollbar-track:active {
+    background: #d4d4d4;
+}
