--- a/plantilla/admin_section/css/admin.css
+++ b/plantilla/admin_section/css/admin.css
@@ -4,7 +4,7 @@ Theme URI: http://www.ansonika.com/foogra/
 Author: Ansonika
 Author URI: http://themeforest.net/user/Ansonika/
 
-[Table of contents] 
+[Table of contents]
 
 1. SITE STRUCTURE
 - 1.1 Typography
@@ -13,7 +13,7 @@ Author URI: http://themeforest.net/user/Ansonika/
 
 2. CONTENT
 - 2.1 Add listing with menu list
-- 2.2 Orders 
+- 2.2 Orders
 
 3. COMMON
 - 3.1 Forms
@@ -41,6 +41,7 @@ body.sticky-footer {
 }
 body.sticky-footer .content-wrapper {
   min-height: calc(100vh - 62px - 62px);
+  max-width: 100vw;
 }
 
 body.fixed-nav {
