--- a/plantilla/css/detail-page.css
+++ b/plantilla/css/detail-page.css
@@ -1191,11 +1191,7 @@
 }
 
 .contacto__cont-formulario form{
-    width: 60%;
-}
-
-.img-form{
-	width: 40%;
+    width: 100%;
 }
 
 .cont{
@@ -1226,20 +1222,13 @@
 
 @media (max-width: 840px){
 	.cont-conoc{
-		width: 90%;
 		margin: 1rem auto 0 auto;
 		grid-template-columns: repeat(8, 1fr);
 	}
 }
 
 @media (max-width: 800px){
-	.img-form{
-		display: none;
-	}
 
-	.contacto__cont-formulario form{
-		width: 100%;
-	}
 }
 
 
@@ -1267,4 +1256,25 @@
     width: 18%;
     margin:0 0 0.5rem 2%;
     height: max-content;
+}
+
+.btn_contactar{
+    position: fixed;
+    bottom: 22px;
+    right: 143px;
+    opacity: 1;
+    cursor: pointer;
+    z-index: 1000;
+    background-color: #F67599;
+    color: #fff;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.btn_contactar:hover, .botonflotanteparaguardado:hover{
+    color:#fff;
 }
