--- a/plantilla/css/detail-page.css
+++ b/plantilla/css/detail-page.css
@@ -1253,9 +1253,9 @@
 }
 
 .img-alergeno{
-    width: 18%;
+    width: 4rem;
     margin:0 0 0.5rem 2%;
-    height: max-content;
+    height: 5rem;
 }
 
 .btn_contactar{
