--- a/plantilla/css/detail-page.css
+++ b/plantilla/css/detail-page.css
@@ -433,6 +433,7 @@
     flex-wrap: nowrap;
     overflow-y: auto;
     scroll-behavior: smooth;
+    width: max-content;
   }
 
   .tabs_detail .nav-tabs .nav-item {
