--- a/plantilla/css/detail-page.css
+++ b/plantilla/css/detail-page.css
@@ -1281,3 +1281,9 @@
 .btn_contactar:hover, .botonflotanteparaguardado:hover{
     color:#fff;
 }
+
+.img-alergenos-sec{
+    width: 2rem;
+    height: 3rem;
+}
+
