--- a/public/css/categorias.css
+++ b/public/css/categorias.css
@@ -4,12 +4,12 @@
 
 
 .checkAlergeno ~ label{
-    opacity: 0.5;
+    filter: grayscale(1);
     cursor: pointer;
 }
 
 .checkAlergeno:checked ~ label{
-    opacity: 1;
+    filter: grayscale(0);
 }
 
 .imagen_izquierda_modal {
@@ -95,10 +95,28 @@ img{
 }
 
 .checkAlergenosEdit ~ label{
-    opacity: 0.5;
+    filter: grayscale(1);
     cursor: pointer;
 }
 
 .checkAlergenosEdit:checked ~ label{
+    filter: grayscale(0);
+}
+
+.img-plato-ordenar{
+    width: 18%;
+    margin:0.5rem 1%;
+}
+
+.checkImg{
+    display: none;
+}
+
+.checkImg ~ label{
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.checkImg:checked ~ label{
     opacity: 1;
 }
