--- a/public/css/categorias.css
+++ b/public/css/categorias.css
@@ -32,11 +32,31 @@
     display: flex;
     flex-wrap: wrap;
     margin: 0.5rem 0;
+    justify-content: space-between;
+
+}
+
+.cont-alergenos span{
+    width: 23%;
+    display: flex;
+    justify-content: center;
+    margin:0 0 0.5rem 0;
+    height: max-content;
+    flex-direction: column;
+    font-size: 10px;
+}
+
+.cont-alergenos p{
+    margin-bottom: 0;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+    text-align: center;
 }
 
 .cont-alergenos img{
-    width: 23%;
-    margin:0 0 0.5rem 2%;
+    width: 100%;
+    height: auto;
 }
 
 .opc-plato::after{
@@ -72,26 +92,64 @@ img{
 .cont-alergenos-crear{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .cont-alergenos-crear span{
-    width: 3.5rem;
-    height: 3.5rem;
-    margin:0.5rem 0.5%;
+    width: 18%;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 0.5rem 0;
+    height: max-content;
+    flex-direction: column;
+    font-size: 10px;
+}
+
+.cont-alergenos-crear p{
+    margin-bottom: 0;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+    text-align: center;
 }
 
 .cont-alergenos-crear img{
     width: 100%;
-}
-
-.img-alergenos-edit{
-    width: 5rem;
-    height: 6rem;
-    margin:0.5rem;
+    height: auto;
 }
 
 .checkAlergenosEdit{
     display: none;
+}
+
+.cont-alergenos-edit{
+    margin-top: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.cont-alergenos-edit>span{
+    width: 12%;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 0.5rem 0;
+    height: max-content;
+    flex-direction: column;
+    font-size: 10px;
+}
+
+.cont-alergenos-edit label p{
+    margin-bottom: 0;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+    text-align: center;
+}
+
+.cont-alergenos-edit label img{
+    width: 100%;
+    height: auto;
 }
 
 .checkAlergenosEdit ~ label{
