--- a/plantilla/css/style.css
+++ b/plantilla/css/style.css
@@ -5763,3 +5763,56 @@ Author URI: http://themeforest.net/user/Ansonika/
 .filtroAjax{
     display: contents;
 }
+
+
+.selectCiudad{
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 62px;
+}
+
+.select2-container--default .select2-selection--single{
+    height: 62px;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow{
+    height: 26px;
+    position: relative;
+    top: 0px;
+    right: 0px;
+    width: 20px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b{
+    left: 0;
+    margin-left: 0;
+}
+
+.resultadosNombre{
+    width: 100%;
+    position: absolute;
+    left: 0;
+    background-color: white;
+    z-index: 999;
+    transition: all 0.5s step-start;
+}
+
+.ocultarNombre{
+    display: none;
+}
+
+.palabraBusqueda:focus ~ .resultadosNombre{
+    border-color: #ccc;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(0 0 0 / 5%);
+}
+
+.resultadosNombre a{
+    padding: 1rem;
+    display: block;
+}
