--- a/plantilla/css/listing.css
+++ b/plantilla/css/listing.css
@@ -106,6 +106,10 @@ a.btn_filters span {
 }
 
 @media (max-width: 991px) {
+  .txtFiltrosAplicados{
+      display: none;
+  }
+
   a.btn_filters {
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -1076,4 +1080,10 @@ span.infobox_rate {
 
 .select2-container--default .select2-selection--single{
     border:none;
+}
+
+.txtFiltrosAplicados{
+    font-size: 16px;
+    color: gray;
+    margin: 0 0 3px 5px;
 }
