--- a/plantilla/css/style.css
+++ b/plantilla/css/style.css
@@ -5684,6 +5684,7 @@ Author URI: http://themeforest.net/user/Ansonika/
       align-items: center;
       width: 100%;
       height: 100%;
+      font-weight: 700;
   }
 
   .ver-menu:hover{
