--- a/plantilla/admin_section/css/custom.css
+++ b/plantilla/admin_section/css/custom.css
@@ -154,3 +154,18 @@
     border-radius: 50%;
     margin-right: 1rem;
 }
+
+.title-table{
+    display: inline-block;
+    margin-bottom: -1rem;
+    font-size: 29px;
+    font-weight: 700;
+}
+
+.pagination .paginate_button{
+    color:#F67599 !important;
+}
+
+.pagination .active{
+    color:white !important;
+}
