--- a/plantilla/css/detail-page.css
+++ b/plantilla/css/detail-page.css
@@ -1257,8 +1257,7 @@
 
 .img-alergeno{
     width: 4rem;
-    margin:0 0 0.5rem 2%;
-    height: max-content;
+    height: 4rem;
 }
 
 .btn_contactar{
